--- a/src/metadata.desktop
+++ b/src/metadata.desktop
@@ -19,6 +19,7 @@ X-KDE-PluginInfo-Name=com.marcinorlowski.kde.crypto-tracker
 X-KDE-PluginInfo-Version=2.1.0
 X-KDE-PluginInfo-Website=https://github.com/MarcinOrlowski/crypto-tracker-plasmoid
 X-KDE-ServiceTypes=Plasma/Applet
-X-Plasma-API=declarativeappletscript
+X-Plasma-API=plasma6
+X-Plasma-Framework=qtquick6
 X-Plasma-MainScript=ui/main.qml
 X-KDE-PluginInfo-Category=Services
